--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">经纬度:</span>
-                    <span class="info-value">119°E, 31°N</span>
+                    <span class="info-value">--°E, --°N</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">建站时间:</span>
@@ -320,4 +320,5 @@
         </footer>
     </div>
 </body>
+
 </html>
